[package]
name = "basecalc"
version = "0.0.0"
edition = "2021"
description = "Arbitrary-precision multi-base scientific calculator"
authors = ["Nick Spiker <fractaldecoder@proton.me>"]
license = "GPL-3.0"
keywords = ["calculator", "arbitrary-precision", "math", "hexadecimal", "dozenal"]
categories = ["mathematics", "command-line-utilities"]
readme = "README.md"
repository = "https://github.com/nickspiker/basecalc"
homepage = "https://github.com/nickspiker/basecalc"

[dependencies]
az = "1.2.1"
blake3 = "1.5.0"
chrono = "0.4.31"
colored = "2.1.0"
dirs = "5.0.1"
rand = "0.8.5"
rug = { version = "1.28.0", features = ["complex","integer"] }
rustyline = "12.0.0"
termion = "4.0.2"
vsf = "0.1.2"
